<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="one">ONE</string>
    <string name="in">IN</string>
    <string name="equal">Equals</string>
    <string name="result">Result</string>
    <string name="calculate">Calculate</string>
    <string name="four">4000</string>
    <string-array name="country_currency">
        <item >Indian Rupee</item>
        <item >US Dollar</item>
        <item >European Union Euro</item>
        <item >Canadian Dollar</item>
        <item >Australian Dollar</item>
        <item >Singapore Dollar</item>
        <item>Uganda Shillings</item>
    </string-array>
    <string-array name="country_value">
        <item >INR</item>
        <item >USD</item>
        <item >EUR</item>
        <item >CAD</item>
        <item >AUD</item>
        <item >SGD</item>
        <item>UGX</item>
    </string-array>
</resources>